# modorganizer-preview_bsa

./: CMakeLists.txt  CMakePresets.json  appveyor.yml  vcpkg.json
.github/workflows/: build.yml  linting.yml
src/: CMakeLists.txt  SConscript  previewBase.pro  preview_base_en.ts  preview_bsa_en.ts  previewbase.cpp  previewbase.h  previewbase_global.h  previewbsa.cpp  previewbsa.h  previewbsa.pro  simplefiletreeitem.cpp  simplefiletreeitem.h  simplefiletreemodel.cpp  simplefiletreemodel.h
